Thu Nov 19 15:41:50 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs,
	  xappy/searchconnection.py: Link to new xapian packages.  These
	  packages have a slightly different API for doing sorting, so
	  update searchconnection.py accordingly: this does mean that the
	  latest version of xapian is required to perform custom sorting,
	  so xapian and xappy need to be upgraded together here.

Mon Nov 09 04:45:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/cachedresults.rst: Tweak final phrase.

Mon Nov 09 04:35:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/cachedresults.rst: Documentation, and lots of analysis.

Mon Nov 09 04:09:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/perftest/cachemanager.py: Improve log messages marginally.

Mon Nov 09 03:05:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/perftest/cachemanager.py: Performance test which includes
	  search tests, and is more careful with some of the other tests.

Mon Nov 09 03:05:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Turn off debugging print.

Mon Nov 09 03:04:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager/generic.py: Turn off debugging print.

Mon Nov 09 01:58:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/perftest/harness.py: Fix some bugs in the timers.

Sun Nov 08 11:27:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/cached_searches.py: Update test for new search
	  interface.

Sun Nov 08 11:21:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Implement query_cached() to return a
	  query which returns the cached items for a given queryid, instead
	  of the additional cached_query_str() parameter to search() - much
	  more flexible.
