@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13653.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13655.tgz',
      'xapian-core.tgz',
-     'fe096641ca8bcb521ec0c58b9453a1eb756bb8c9',
+     '103f9ace5bc6f1ab131b17bee98496dd614e57a3',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13653.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13655.tgz',
      'xapian-bindings.tgz',
-     '9d10c278303b0e8bd637c4797de8de79ba07736b',
+     'e72a1b67c1c4953c7627a8df6e322215cbed0114',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13653.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13655.tgz',
      'win32msvc.tgz',
-     '88dcd9ebfac6b5f5f1309d3f0c5997bc4be92a37',
+     '63fe4cd29dd9064b90f3c34ce034e7a3e256af91',
      'xapian-core/win32',
     ),
     ('Xapian extras',
